# gspaces

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: pip_publish.yml
gspaces/: __init__.py  linear.py  log.py
tests/: test_linear.py  test_log.py
