[project]
name = "gspaces"
version = "0.1.0"
description = "Memory efficient alternative for range spaces."
readme = "README.md"
requires-python = ">=3.7"
license = "UNLICENSED"
authors = ["Quinten Star"]

[project.urls]
repository = "https://github.com/quintenstar/gspaces"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
python_version = "3.9"

[tool.pydocstyle]
convention = "google"
ignore = "D107" # Ignores docstyle in __init__
