[metadata]
name = gspaces
version = 0.2.0
description = Memory efficient alternative for range spaces.
#long_description = file: README.md
author = Quinten Star
keywords = numpy, arange, range, linspace, geomspace, logspace, generators
license = MIT
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages=find:
python_requires = >=3.7
# install_requires=

# [options.packages.find]
# where=gspaces